# Ghost-Downloader-3

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CODE_REVIEW_CHECKLIST.md  CONTEXT.md  FIREFOX_EXTENSION_README.md  FIREFOX_EXTENSION_SUMMARY.md  FIREFOX_EXTENSION_VERIFICATION.md  Ghost Downloader 配置文件.json  Ghost-Downloader-3.iss  Ghost-Downloader-3.py  QML_MIGRATION.md  README.md  README_en.md  README_ru.md  README_zh.md  README_zhCN.md  RUNTIME_UPDATE_IMPLEMENTATION.md  Res.qrc  Res_rc.py  Res_rc.qrc  build-mac.command  build.py  chrome_extension.crx  compile_translations.py  config.json  convert_to_pyqt5.py  convert_to_pyqt6.py  crowdin-browser.yml  crowdin.yml  deploy.py  firefox_extension.xpi  install.py  main.py  nuitka-crash-report.xml  progress.txt  pyproject.toml  pyrightconfig.json  pysidedeploy.spec  (+4 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
android/: .dockerignore  .gitignore  BUILD.md  Dockerfile  build_apk.sh  gradle-init.gradle  main.py  make_launch_assets.py  preview.py  run_build.sh
app/: client.py  format.py  signal_bus.py  startup.py  update.py
browser_extension/: FIREFOX_BUILD.md  extension.vue
chrome_extension/: background.js  chrome_extension.crx  manifest.json  popup.html  popup.js
ci/: sync_i18n_res.py
firefox_extension/: background.js  manifest.json  popup.html  popup.js
images/: logo.icns
plugins/: jy_os_page.DISABLED  jy_os_page.py  jy_os_page.py.DISABLE  os_page_plugin.disabled  parse_bilibili_plugin.py
pyqt_github_markdown/: __init__.py  icons.py  inline.py  markdown_service.py  markdown_widget.py  renderer.py  theme.py
resources/: PlanTaskDialog.ui  Res_rc.qrc  Ui_AddTaskOptionDialog.ui  Ui_PopUpWindow.ui  chrome_extension.crx  firefox_extension.xpi  logo.icns
scripts/: Ghost-Downloader-3.iss  convert_to_pyqt6.py  deploy.py  sync_i18n_res.py  translate_i18n.py
test/: test_async_and_notification.py
tests/: conftest.py  fakes.py  test_automation_contracts.py  test_browser_service.py  test_categories.py  test_category_rules.py  test_clipboard.py  test_config.py  test_error_propagation.py  test_features_standalone.py  test_file_drag.py  test_file_selection.py  test_filter.py  test_framing.py  test_github_pack.py  test_gui_shell.py  test_http_subworker.py  test_icon_label.py  test_identity_preset.py  test_message.py  test_mobile_language_dialog.py  test_new_features.py  test_oobe_runtime_page.py  test_pack_settings.py  test_persistence.py  test_pop_up_window.py  test_qml_smoke.py  test_selection.py  test_socket_link.py  test_socket_spine.py  test_spine.py  test_task_card.py  (+12 more)
(+601 files in other folders)
