[project]
name = "ghost-downloader-3"
version = "3.10"
description = "ghost-downloader-3"
requires-python = ">=3.11"
dependencies = [
    "desktop-notifier>=6.2.0",
    "libtorrent>=2.0.11",
    "libtorrent-windows-dll>=0.0.3; sys_platform == 'win32'",
    "loguru>=0.7.3",
    "niquests[http3,socks,speedups]>=3.18.2",
    "nuitka>=4.0.7",
    "pyside6~=6.10.2",
    "qrcode[png]>=8.2",
    "winloop>=0.6.0; sys_platform == 'win32'",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "aioftp[socks]>=0.27.2",
    "pyside6-fluent-widgets>=1.11.1",
    "markdown-it-py>=4.2.0",
    "mdurl>=0.1.2",
    "pygments>=2.20.0",
    "emoji>=2.15.0",
    "linkify-it-py>=2.1.0",
    "uc-micro-py>=2.0.0",
]

[dependency-groups]
dev = [
    "types-libtorrent>=2.0.11.20250816",
]
