[project]
name = "ghost-downloader-3"
version = "3.8"
description = "ghost-downloader-3"
requires-python = ">=3.11"
dependencies = [
    "desktop-notifier>=6.2.0",
    "libtorrent>=2.0.11",
    "libtorrent-windows-dll>=0.0.3; sys_platform == 'win32'",
    "loguru>=0.7.3",
    "niquests[http3,socks,speedups]>=3.18.2",
    "nuitka>=4.0.7",
    "pyside6~=6.10.2",
    "qrcode[png]>=8.2",
    "winloop>=0.6.0; sys_platform == 'win32'",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "aioftp[socks]>=0.27.2",
    "pyside6-fluent-widgets>=1.11.1",
    "m3u8>=6.0.0",
    "mpegdash>=0.4.1",
    "rinui>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-qt>=4.5.0",
    "types-libtorrent>=2.0.11.20250816",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
